# x-video-downloader

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
deploy/: Dockerfile  com.user.xdl.plist  docker-compose.yml  macos-client.md  oracle-setup.md  tailscale-setup.md
docs/: PLAN.md
ios/: README.md
src/xdl/: __init__.py  cli.py  config.py  extractor.py  ledger.py  runner.py  server.py  tasks.py
tests/: conftest.py  test_config.py  test_download_fallback.py  test_extractor.py  test_ledger.py  test_runner.py  test_server.py
